--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,9 @@
     android:layout_gravity="bottom|center">
 
     <Button
-        android:text="Sign In"
-        android:id="@+id/sign_in_button"
+        android:text="Refresh"
+        android:id="@+id/refresh"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:enabled="false" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
