--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#2E2D2D</color>
+    <color name="colorPrimaryDark">#07886A</color>
+    <color name="colorAccent">#03D6C2</color>
+    <color name="red500">#DA0340</color>
+    <color name="red50">#E4BBC7</color>
+    <color name="white">#FFFFFF</color>
+    <color name="dark">#333232</color>
+    <color name="yellow">#F3E996</color>
 </resources>
