--- a/app/src/main/res/layout/team_activity.xml
+++ b/app/src/main/res/layout/team_activity.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
