--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Refresh"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <EditText
             android:id="@+id/match_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter unique match ID"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:layout_width="match_parent"
