Added score details

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Refresh"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/match_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter unique match ID"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
         <TextView
             android:layout_width="match_parent"
@@ -62,7 +62,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
-        android:text="Last updated: 18 Sep 2020"
         android:textColor="@color/white"
         android:textSize="14sp" />
 </RelativeLayout>
