--- a/app/src/main/res/layout/board_item.xml
+++ b/app/src/main/res/layout/board_item.xml
@@ -1,33 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
-    android:minHeight="40dp"
+    android:layout_margin="10dp"
     android:gravity="center"
-    android:orientation="vertical">
+    android:minHeight="40dp"
+    android:orientation="horizontal">
 
     <TextView
-        android:paddingStart="20dp"
+        android:layout_weight="2"
         android:id="@+id/nameText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:gravity="center"
+        android:gravity="start|center_vertical"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
     <TextView
-        android:paddingEnd="20dp"
-        android:id="@+id/scoreText"
-        android:layout_width="wrap_content"
+        android:id="@+id/battingScoreText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_weight="1"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="16sp"
         tools:ignore="RelativeOverlap" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/bowlingScoreText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        tools:ignore="RelativeOverlap" />
+
+    <TextView
+        android:id="@+id/FieldingScoreText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        tools:ignore="RelativeOverlap" />
+
+    <TextView
+        android:layout_weight="1"
+        android:id="@+id/scoreText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        tools:ignore="RelativeOverlap" />
+
+</LinearLayout>
