--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,21 +13,31 @@
         android:orientation="vertical"
         android:visibility="visible">
 
-        <Button
-            android:id="@+id/refresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Refresh"
-            android:visibility="gone" />
-
-        <EditText
-            android:id="@+id/match_id"
+        <LinearLayout
+            android:id="@+id/admin_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter unique match ID"
-            android:visibility="gone" />
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <EditText
+                android:id="@+id/match_id"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/white"
+                android:layout_weight="3"
+                android:hint="Enter unique match ID" />
+
+            <Button
+                android:id="@+id/refresh"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Refresh"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
